# Zephyr_task

./: .gitignore  README.md
all_leds/: CMakeLists.txt  debug.conf  prj.conf
all_leds/src/: main.c
blink_all/: CMakeLists.txt  disco_l475_iot1.overlay
blink_all/src/: main.c
buttonled/: CMakeLists.txt  prj.conf
buttonled/boards/: disco_l475_iot1.conf
buttonled/include/: my_console.h
buttonled/src/: .main.c.swp  main.c  my_console.c
modules/my_console/: CMakeLists.txt  Kconfig  my_console.c  my_console.h
modules/my_hd44780_pcf8574_mod/: CMakeLists.txt  Kconfig
pollin_button/: CMakeLists.txt
pollin_button/src/: main.c
pwm2/: CMakeLists.txt  disco_l475_iot1.overlay  prj.conf
pwm2/src/: main.c
randomgen/: CMakeLists.txt
randomgen/src/: main.c
rtos_tasks/order_task/: CMakeLists.txt  prj.conf
rtos_tasks/ping_pong/: CMakeLists.txt
rtos_tasks/rtos_blinky/: CMakeLists.txt  prj.conf
rtos_tasks/sem_task/: CMakeLists.txt  prj.conf
sensor_task/bat_log/: CMakeLists.txt  prj.conf
sensor_task/lcd_sens/: CMakeLists.txt  prj.conf
sensor_task/logger/: CMakeLists.txt  prj.conf
sensor_task/mem_log/: CMakeLists.txt  prj.conf
sensor_task/msgq/: CMakeLists.txt  debug.conf  prj.conf
uart_task/echo_serv/: CMakeLists.txt
uart_task/int_echo_serv/: CMakeLists.txt  prj.conf
uart_task/led_ctrl/: prj.conf  (+1 more)
uartnorm/: CMakeLists.txt  prj.conf
wifi/wifi_con/: CMakeLists.txt  prj.conf  zsock_code.c
wifi/wifi_con/bk/: mainc.bk  ping.c.bk  prj.conf.bk  prj.conf.bk2
wifi/wifi_con/include/: ping.h
wifi/wifi_con/src/: main.c  ping.c  wifi.c  wifi.h
(+48 files in other folders)
